echoserver/echoserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: echoserver-deployment
  name: echoserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: echoserver-deployment
    spec:
      containers:
      - image: k8s.gcr.io/echoserver:1.4
        name: echoserver
        resources: {}
status: {}
