echoserver/echoserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: echoserver-deployment
  name: echoserver-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: echoserver-deployment
  type: NodePort
status:
  loadBalancer: {}
