echoserver/echoserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  creationTimestamp: null
  name: echoserver-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: echoserver-service
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
